<resources>
    <string name="app_name">EspaldApp</string>
    <string name="action_settings">Settings</string>
    
    <string name="enter_name_text">Ingrese su nombre</string>

    <string name="select_interval_text">Intervalo de notificacion</string>

    <string-array name="intervals_array">
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>60 min</item>
        <item>90 min</item>
    </string-array>

    <string name="start_time_text">Hora de inicio:</string>
    <string name="end_time_text">Hora de fin:</string>

    <string name="accept_btn_text">Aceptar</string>


    <string name="enable_vibration_txt">Vibración activada</string>
</resources>
