<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/abc_textfield_search_material"
    android:focusable="true">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_text"/>

    <!-- Agregar hora inicio, hora fin, intervalo, vibracionActivada  -->
    <TextView
         android:id="@+id/txt_interval"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/select_interval_text"
        android:layout_gravity="top"/>
     <Spinner
         android:id="@+id/interval_spiner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top">
        <TextView
            android:id="@+id/txt_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_vibration_txt"
            android:layout_gravity="top"/>
        <Switch
            android:id="@+id/chk_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </LinearLayout>

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_btn_text"
        android:layout_gravity="bottom|right"/>

</LinearLayout>
